--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,8 @@ services:
 before_script:
 - psql -U postgres -c 'create database meow_test;'
 
+env:
+- MEOW_TEST_DB: postgres://localhost/meow_test?sslmode=disable
+
 # Run with the race detector, it makes it slower, but races in something like this are bad.
 script: go test -race ./...
